# dnfunc

./: .pre-commit-config.yaml  .renovaterc.json  .typos.toml  CHANGELOG.md  Makefile  Makefile.vendor.mk  README.md  cliff.toml  deadblock.py  dnfunc.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  python-app.yml  python-vs-app.yml
src/dnfunc/: __init__.py  dnfunc.py
tests/: test_dnfunc.py
