[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "dnfunc"
version = "0.0.0"
description = "A collection of Vapoursynth functions and wrapperspoetr"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/dnfunc"
repository = "https://github.com/DeadNews/dnfunc"
keywords = ["vapoursynth", "vapoursynth-functions", "video-encoding"]
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
]

[tool.poetry.dependencies]
python = "^3.10"
havsfunc = "^33"
pyyaml = "^6.0"
vapoursynth = ">=61"
vsutil = "^0.8.0"
vstools = "^2.0.6"

[tool.poetry.group.ci.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
poethepoet = "^0.19.0"
ruff = "^0.0.264"
types-pyyaml = "^6.0.12.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.poe.tasks]
ruff = "ruff check . --diff --format github"
black = "black . --check --diff"
mypy = "mypy ."
ci.sequence = ["ruff", "black", "mypy"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
line-length = 99

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src"
testpaths = ["tests"]
markers = ["docker", "slow"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.ruff]
line-length = 99
select = ["ALL"]
ignore = [
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "E501",    # Line too long
  "EXE001",  # Shebang is present but file is not executable
  "FBT001",  # Boolean positional arg in function definition
  "PLR2004", # Magic value used in comparison
  "FBT",
  #
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D103",   # Missing docstring in public function
  "ERA001", # Found commented-out code
]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.pylint]
max-args = 10
