[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "dnfunc"
version = "0.0.0"
description = "A collection of Vapoursynth functions and wrappers"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/dnfunc"
repository = "https://github.com/DeadNews/dnfunc"
keywords = ["vapoursynth", "vapoursynth-functions", "video-encoding"]
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
]

[tool.poetry.dependencies]
python = "^3.11"
vapoursynth = "^65"
havsfunc = "^33"
lvsfunc = "^0.8.0"
pyyaml = "^6.0.1"
vstools = "^3.0.1"
vsutil = "^0.8.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
poethepoet = "^0.24.4"
ruff = "^0.1.8"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
mypy = "mypy ."
ruff = "ruff check ."
ruff-fmt = "ruff format ."
lint.sequence = ["ruff", "ruff-fmt", "mypy"]

[tool.poe.tasks.test]
cmd = "pytest --cov-report=xml"

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src --cov-report=term"
testpaths = ["tests"]
markers = ["online"]

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 99
target-version = "py311" # Until Poetry v2

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "E501",    # Line too long
  "EXE001",  # Shebang is present but file is not executable
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line.
  "PLR0913", # Too many arguments to function call
  #
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "ERA001",  # Found commented-out code
  "PLR2004", # Magic value used in comparison
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "D", "PLC1901", "PLR2004", "S"]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 129

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
